--- a/docker/assets/vnm-keycloak-theme/login/resources/css/styles.css
+++ b/docker/assets/vnm-keycloak-theme/login/resources/css/styles.css
@@ -3322,3 +3322,17 @@ svg {
   font-size: 15px;
   color: #e00b0b;
 }
+
+.alert-warning {
+  position: absolute;
+  z-index: 10;
+  background: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+  border: 3px solid #ff5722;
+  left: 50%;
+  top: 10px;
+  transform: translate(-50%);
+  font-size: 15px;
+  color: #ff5722;
+}
