--- a/docker/assets/vnm-keycloak-theme/login/resources/css/styles.css
+++ b/docker/assets/vnm-keycloak-theme/login/resources/css/styles.css
@@ -3336,3 +3336,17 @@ svg {
   font-size: 15px;
   color: #ff5722;
 }
+
+.alert-success {
+  position: absolute;
+  z-index: 10;
+  background: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+  border: 3px solid #4caf50;
+  left: 50%;
+  top: 10px;
+  transform: translate(-50%);
+  font-size: 15px;
+  color: #4caf50;
+}
